--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-<<<<<<< HEAD
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
-=======
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="css/coverPage.css">
->>>>>>> origin/master
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -36,8 +29,8 @@
                 
                 <div class="collapse navbar-collapse" id="navMain">
                   <ul class="nav navbar-nav pull-right">
-                    <li class="active"><a href="#">Movies</a></li>
-                    <li><a href="#">Contact Us</a></li> 
+                    <li class="active"><a href="films.html">Films</a></li>
+                    <li><a href="#">Contactez-nous</a></li> 
                   </ul>
                 </div>
               </div>
@@ -81,7 +74,6 @@
             <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
             <script src="js/vendor/bootstrap.min.js"></script>
-            <script src="js/vendor/angular.min.js"></script>
             <script src="js/cover.js"></script>
           </body>
           </html>
