--- a/film.html
+++ b/film.html
@@ -23,6 +23,7 @@
             <p><strong>Scénariste :</strong> <span ng-repeat="writer in film.people.writer">{{writer.first_name}} {{writer.last_name}} </span></p>
             <p><strong>Date de sortie :</strong> {{film.release_date | date:"dd/MM/yyyy"}}</p>
             <p><strong>Durée :</strong> {{film.running_time}} minutes</p>
+            <p>{{film.summary}}</p>
           </div>
         </div>
       </div>
@@ -61,6 +62,16 @@
       </div> <!-- /clearfix -->
 
     </div><!-- /row-actors -->
+
+    <!-- Left and right controls -->
+    <a ng-click="previousFilm()" class="left carousel-control control1" href="#myCarousel" role="button" data-slide="prev1">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a ng-click="nextFilm()" class="right carousel-control control1" href="#myCarousel" role="button" data-slide="next1">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
 
   </div><!-- /container -->
 </div> <!-- /movie --> 
