--- a/films.html
+++ b/films.html
@@ -20,25 +20,7 @@
 </head>
 
 <body>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-      <!--[if lt IE 8]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-      <![endif]-->
-
-      <film ng-init="changeFilm(1)"></film>
-
-    </div> <!-- /carousel-inner -->
-
-    <!-- Left and right controls -->
-    <!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev1">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next1">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>-->
+      <film></film>
   </div> <!-- /myCarousel -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
