--- a/film-form.html
+++ b/film-form.html
@@ -1,6 +1,6 @@
 <form name="form.filmForm" class="form-horizontal">
   <div class="form-group">
-    <label for="intputName" class="col-sm-2 control-label">Name</label>
+    <label for="inputName" class="col-sm-2 control-label">Name</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="inputName" placeholder="Name" ng-model="form.film.name">
     </div>
