--- a/film.html
+++ b/film.html
@@ -13,16 +13,17 @@
         <div class="col-md-4">
           <div class="cover">
             <figure class="figure figure-cover">
-              <img src="img/film/{{film.image}}" class="figure-img img-fluid img-rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+              <img src="{{film.image}}" class="figure-img img-fluid img-rounded" alt="{{film.name}}">
             </figure>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-8">
           <div class="description">
-            <p><strong>Réalisateur :</strong> <span ng-repeat="director in film.people.director">{{director.first_name}} {{director.last_name}} </span></p>
-            <p><strong>Scénariste :</strong> <span ng-repeat="writer in film.people.writer">{{writer.first_name}} {{writer.last_name}} </span></p>
-            <p><strong>Date de sortie :</strong> {{film.release_date | date:"dd/MM/yyyy"}}</p>
-            <p><strong>Durée :</strong> {{film.running_time}} minutes</p>
+            <p><strong>Director :</strong> <span ng-repeat="director in film.people.director">{{director.first_name}} {{director.last_name}}  </span></p>
+            <p><strong>Writer :</strong> <span ng-repeat="writer in film.people.writer">{{writer.first_name}} {{writer.last_name}}  </span></p>
+            <p><strong>Composer :</strong> <span ng-repeat="composer in film.people.composer">{{composer.first_name}} {{composer.last_name}}  </span></p>
+            <p><strong>Release date :</strong> {{film.release_date | date:"dd/MM/yyyy"}}</p>
+            <p><strong>Runtime :</strong> {{film.running_time}} minutes</p>
             <p>{{film.summary}}</p>
           </div>
         </div>
@@ -37,7 +38,7 @@
           <div id="thumbcarousel" class="carousel slide" data-interval="false">
             <div class="carousel-inner">
               <div class="item active">
-                <div ng-repeat="actor in film.people.actor|limitTo:nbActorsActive" data-target="#carousel" data-slide-to="0" class="thumbnail thumb"><img src="img/person/{{actor.picture}}" alt="{{actor.first_name}} {{actor.last_name}} Image" class="img-responsive actor">
+                <div ng-repeat="actor in film.people.actor|limitTo:nbActorsActive" data-target="#carousel" data-slide-to="0" class="thumbnail thumb"><img src="{{actor.picture}}" alt="{{actor.first_name}} {{actor.last_name}} Image" class="img-responsive actor">
                   <div class="caption">
                     <h4>{{actor.first_name}} {{actor.last_name}}</h4>
                     <h5>{{actor.character}}</h5>
@@ -45,7 +46,7 @@
                 </div>
               </div><!-- /item -->
               <div class="item" ng-repeat="i in itemsRange">
-                <div ng-repeat="actor in film.people.actor|limitTo:nbActorsActive:i" data-target="#carousel" data-slide-to="0" class="thumbnail thumb"><img src="img/person/{{actor.picture}}" alt="{{actor.first_name}} {{actor.last_name}} Image" class="img-responsive actor">
+                <div ng-repeat="actor in film.people.actor|limitTo:nbActorsActive:i" data-target="#carousel" data-slide-to="0" class="thumbnail thumb"><img src="{{actor.picture}}" alt="{{actor.first_name}} {{actor.last_name}} Image" class="img-responsive actor">
                   <div class="caption">
                     <h4>{{actor.first_name}} {{actor.last_name}}</h4>
                   </div>
