--- a/film.html
+++ b/film.html
@@ -65,11 +65,11 @@
     </div><!-- /row-actors -->
 
     <!-- Left and right controls -->
-    <a ng-click="previousFilm()" class="left carousel-control control1" href="#myCarousel" role="button" data-slide="prev1">
+    <a ng-click="previousFilm()" class="left carousel-control control1" href="#" role="button" data-slide="prev1">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a ng-click="nextFilm()" class="right carousel-control control1" href="#myCarousel" role="button" data-slide="next1">
+    <a ng-click="nextFilm()" class="right carousel-control control1" href="#" role="button" data-slide="next1">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
